--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "autoprefixer": "^10.4.17",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "firebase": "^10.8.1",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
