--- a/package.json
+++ b/package.json
@@ -10,22 +10,30 @@
     "start:both": "concurrently \"npm run dev\" \"npm run start:server\"",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "netlify:start": "netlify-lambda serve functions",
+    "netlify:build": "netlify-lambda build functions",
+    "net:build": "netlify deploy --prod"
   },
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "firebase": "^10.8.1",
     "multer": "^1.4.5-lts.1",
+    "netlify-cli": "^17.21.1",
+    "netlify-lambda": "^2.0.16",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
+    "react-toastify": "^10.0.5",
+    "serverless-http": "^3.2.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
